# CodeSnippet

APUE/: makefile
APUE/Chp14/: filelock  filelock.c  mmap.c  nonblock  nonblock.c  readlock  readlock.c  stderr.out  test.sh
APUE/thread/: a.out  first.c
LinuxSystemProgram/: CMakeLists.txt
LinuxSystemProgram/Chp04/: CMakeLists.txt
LinuxSystemProgram/Chp06/: longjmp.c  makefile  mem_segments.c
LinuxSystemProgram/Chp10/: time.c
LinuxSystemProgram/Chp20/: makefile  ouch.c
LinuxSystemProgram/Chp28/: CMakeLists.txt  session.c
LinuxSystemProgram/Chp63/: epoll.c  select.c
ReReadULPIP/: CMakeLists.txt
ReReadULPIP/Chp02/: CMakeLists.txt  cp.c  who.c  who2.c
ReReadULPIP/Chp03/: readdir  readdir.c  stat  stat.c
ReReadULPIP/Chp04/: mpwd  mpwd.c  mrpwd  mrpwd.c
ReReadULPIP/Chp10/: pipedemo2  pipedemo2.c
ReReadULPIP/Chp13/: log  log.c  logclient  logclient.c
ReReadULPIP/Chp14/: CMakeLists.txt  hello_multi.c  hello_multi_mutex.c  makefile  thread_gpid.c
ULPIP/Chap 01/: Makefile
UnixIPC/: CMakeLists.txt
UnixIPC/Chp07-mutex/: CMakeLists.txt
UnixIPC/Chp09-filelock/: filelock.c  filewithlock.c
UnixIPC/Chp10-posix-sem/: CMakeLists.txt  nproduers-nconsumer.c
UnixIPC/Chp10-posix-sem/include/: pc.h
advanced/: main.go  makefile  mini.py
advanced/wrap/: merge.go  sub.go  wrap.go
advanced/wrap/fetch/: .fetch.go.swp  fetch.go
bash/: .valid.sh.swp  valid.sh
cpp/cpp-dynamic-static/: dlopen_example  dlopen_example.c  main_dynamic  main_static  makefile
cpp/cpp-dynamic-static/src/: hello.c  main.c
cpp/cppLink/: .makefile.swp  makefile
cpp/cppLink/include/: hello.h
cpp/cppLink/src/: .main.c.swp
cpp/cppMemory/: CMakeLists.txt
cpp/cppMemory/gdbDemo/: hello  virtual.cpp
cpp/cppMemory/include/: vptr.h
cpp/cppMemory/src/redundan_inher/: main.cpp
cpp/cppMemory/src/single_inher/: main.cpp
cpp/cppMemory/src/test_cmake/: CMakeLists.txt
cpp/cppObj/: multi-inher  multi-virtual-inher  multi-virtual-inher.cpp  mutli-inher.cpp
cpp/cppSort/: main.cpp  main_no_sort.cpp  makefile  perf.data  result.txt  sort_string  sort_string_no_sort  sort_string_tc  sort_string_tc_no_sort
cpp/cppSort/mytest/: mytest  mytest.c  perf.data  perf.data.old  t-test1  t-test1.c
cpp/cppSort/preload/: main.c  malloc.c
cpp/cppjson/: CMakeLists.txt
cpp/cppjson/include/: rapidjson
cpp/cppjson/src/: CMakeLists.txt  hello.cpp
cppMemory/: CMakeLists.txt
cppMemory/gdbDemo/: Makefile  childvirtual  gdb.session  main.cpp  multi.cpp
cppMemory/include/: .bytes.h.swp  .vptr.h.swp  bytes.h
cppMemory/lib/bytes/: .inspect.cpp.swp  inspect.cpp
cppMemory/src/multi_inheri/: main.cpp
cppMemory/src/redundan_inher/: .main.cpp.swp
fcntl/: filelock.h  main.c  makefile
go-database-sql/: dbExample.go  errorHandle.go  main.go  transation.go  workWithNull.go
go-demo/go-database-sql/: WorkWithUnknownCol.go  connection_pool.txt
go-demo/go-encoding/xml/: xml  (+2 more)
go-demo/go-flag/: go-flag  main.go
go-demo/go-orm/: main.go
go-demo/go_sync/: go_sync  main.go
go-demo/goembed/: README.md  goembed  main.go
go-demo/google-protocol-buffer/: google-protocol-buffer  main.go  makefile
go-demo/goportforward/: goportforward  main.go
goembed/: mask.go
golearn/: golearn  main.go
golearn/curl/: hello.txt  main.go
golearn/embd/: embd
golearn/loopp/: hello  loopp  select
golearn/net/: main.go
golearn/pipeline/: pipeline  ref.go
goportforward/: main.go
gorpc/rpcargs/: type.go
https/: server.py
https/cert/: ca.crt  ca.key  ca.srl  domain.crt  domain.csr  domain.key  makefile
python/python-concurrent-futures/: con_thread.py  seq.py
python/python-flask-request/: main.go  main.py
python/python-multi-process-socket/: client.py  main.py
python/python-share-mem/: client.py  client_p.py  server.py  server_p.py  test.data
python/python-wsgi-learn/: main.py
tlpi/directio/: dire_write_example.c  direct_example.c  direct_read.c  direct_write  direct_write.c  inc_buff  inc_cache  makefile
(+130 files in other folders)
